--- a/Bootstrap/Aula 4.html
+++ b/Bootstrap/Aula 4.html
@@ -1,29 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link  href="script.js">
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
+    <link href="script.js" />
+  </head>
+  <body>
     <div class="container text-center">
-        <div class="row">
-          <div class="col">
-            <button type="button" class="btn btn-success btn-block" onClick="window.changeText()"
-             data-toggle="button" aria-pressed="false" autocomplete="off">Me pressione</button>
-          </div>
-          <div class="col">
-            Column
-          </div>
-          <div class="col" id="display">
-            Column
+      <div class="row">
+        <div class="col">
+          <button
+            type="button"
+            class="btn btn-primary btn-block"
+            onClick="window.changeText()"
+            data-toggle="button"
+            aria-pressed="false"
+            autocomplete="off"
+          >
+            Me pressione
+          </button>
+        </div>
+        <div class="col">
+          <div class="dropdown">
+            <button
+              class="btn btn-secondary dropdown-toggle"
+              type="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              Menu Suspenso
+            </button>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#" onClick="window.selectText('Escolha 1')">
+                 Escolha 1</a></li>
+              <li><a class="dropdown-item" href="#" onClick="window.selectText('Escolha 2')">
+                 Escolha 2</a></li>
+              <li><a class="dropdown-item" href="#" onClick="window.selectText('Escolha 3')">
+                Escolha 3</a></li>
+            </ul>
           </div>
         </div>
+        <div class="col" id="display">Column</div>
       </div>
-     
-      
-</body>
+    </div>
+    <script type="text/javascript">
+      var display = document.getElementById("display");
+      function changeText() {
+        display.innerHTML = "O botao foi pressionado";
+      }
+
+      function selectText(text) {
+        display.innerHTML = text;
+      }
+    </script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
